feat(ai): detect confirmation-email language from order remarks (ADR 0023)
Fixes a real, previously-unreachable bug: the mail module has shipped English and
Polish translation bundles for a while, but nothing ever set a per-order locale, so
every confirmation email/PDF was always rendered in English regardless of the
customer - CustomerMessageCreator/FreeMarkerTemplateProcessor both hard-coded
Locale.getDefault() instead of reading LocaleContextHolder, and the only test
covering Polish only passed by mutating the JVM-wide default Locale in @BeforeAll.

- New closed domain enum SupportedLocale (ENGLISH, POLISH) and outgoing-only port
  DetectRemarksLanguageOutPort (no incoming port pair needed - invoked only
  internally from SendOrderConfirmationEmailUseCase, same relationship
  SendEmailOutPort itself already has to that use case).
- SendEmailOutPort.send(Order) -> send(Order, SupportedLocale) is the only signature
  change; SendEmailAdapter maps the locale and threads it through
  LocaleContextHolder (reset in a finally) around the existing
  EmailMessageFactory call, so CustomerMessageCreator/FreeMarkerTemplateProcessor
  keep reading the same ambient locale they always should have - just fixed to
  actually read it instead of the JVM default.
- RemarksLanguageDetectorAdapter (Ollama-backed, same shape as the remarks-triage
  classifier) classifies the free-text remarks a customer already enters on the
  order form into ENGLISH/POLISH; unlike the remarks classifier, every failure
  (technical or unparseable response) defaults to ENGLISH rather than propagating,
  since this runs synchronously inside the confirmation-email step and shouldn't
  cost a customer their email over a non-essential enhancement.
  DoNotDetectRemarksLanguageAdapter is the usual matchIfMissing=true default.
- EmailIntegrationTest reworked to prove the fix: removed the JVM-wide
  Locale.setDefault() hack, now sends real orders with SupportedLocale.POLISH/
  ENGLISH per test, plus a dedicated